@@ -1,6 +1,6 @@
 % File src/library/base/man/formals.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2022 R Core Team
+% Copyright 1995-2023 R Core Team
 % Distributed under GPL 2 or later
 
 \name{formals}
@@ -19,7 +19,8 @@ formals(fun, envir = environment(fun)) <- value
   \item{envir}{\code{\link{environment}} in which the function should be
     defined (or found via \code{\link{get}()} in the first case and when
     \code{fun} a character string).}
-  \item{value}{a \code{\link{list}} (or \code{\link{pairlist}}) of \R expressions.}
+  \item{value}{a \code{\link{list}} (or \code{\link{pairlist}}, hence possibly
+    \code{\link{NULL}}) of \R expressions.}
 }
 \details{
   For the first form, \code{fun} can also be a character string naming
